Updating my notes for the VPN setup on OpenBSD. With additional links for cloud providers in favlinks.

--- a/content/notes/20221203170137.md
+++ b/content/notes/20221203170137.md
@@ -1,14 +1,20 @@
 ---
-title: "Setup For My Personal VPN Using Wireguard, OpenBSD, and Vultr VPS"
+title: "Personal VPN Setup Using Wireguard, OpenBSD, and Vultr VPS"
 date: 2022-12-03T17:01:37-06:00
-description: "Notes for building my personal WireGuard VPN on OpenBSD hosted on a Vultr VPS."
+summary: "Notes for building my personal WireGuard VPN on OpenBSD hosted on Vultr VPS."
 draft: false
-tags: [ "WireGuard", "OpenBSD" ]
-type: post
-showTableOfContents: true
+hidden: false
+externalURL: false
+showDate: true
+showModDate: true
+showReadingTime: true
+showTags: true
+showPagination: true
+tags: ["sysadmin"]
 ---
 
 ## Summary
+---
 
 It's been a minute since I've posted. But, here you go. New post with
 some personal infrastructure. In the future I'll lay out some of the
@@ -27,6 +33,7 @@ it is. If someone were to stumble across this in the future; judging
 it isn't outdated by then, they'd know what to replace the value with.
 
 ## Cloud Hosting
+---
 
 Vultr VPS is an awesome cloud hosting provider with multiple options
 available. Go ahead and check out some of their options. You can build
@@ -65,12 +72,8 @@ more as I improve on this.
 
 - [OpenBSD: Initial Virtual Private Server Baseline](/posts/20221203224604/)
 
-Post for deploying OpenBSD with full disk encryption will be provided
-below.
-
-- [OpenBSD: Full Disk Encryption on Vultr Instance](#)
-
 ## Initial Server Setup
+---
 
 First step is to install the necessary packages to perform the setup.
 The libqrencode(1) package is installed so I can configure WireGuard
@@ -94,7 +97,7 @@ configure this. But, if I do in the future. I should be able to find it
 in the future with this post.
 
 ```sh
-sysctl net.inet6.ip.forwarding=1
+sysctl net.inet.ip6.forwarding=1
 ```
 
 So these settings persist across reboots. The following line needs to be
@@ -109,39 +112,23 @@ the ```/etc/sysctl.conf``` file.
 
 ```sh
 net.inet.ip.forwarding=1
-net.inet6.ip.forwarding=1
+net.inet.ip6.forwarding=1
 ```
 
-## WireGuard Server Setup
+## Generating Keys
+---
 
-Creating the wirguard directory where the confiuration file will be
-stored.
+One of the steps I like to take is generating the private/public keys for the 
+server and the clients before I start the work. Considering the packages are
+installed. We can get to work on generating them now and reference them later.
 
-```sh
-mkdir -p /etc/wireguard
-```
+When the keys are generated and notated somewhere. I'll remove these files so
+they aren't on a workstation somewhere or the server.
 
-Creating the WireGuard configuration file for later.
+### Server
+---
 
-```sh
-touch /etc/wireguard/wg0.conf
-```
-
-Making the configuration file for the tunnel interface less accessible
-to anyone who could access the server.
-
-```sh
-chmod 0600 /etc/wireguard/*
-```
-
-Changing the user and group access of the wg0.conf file to root and
-wheel.
-
-```sh
-chown root:wheel /etc/wireguard/wg0.conf
-```
-
-### Generate Server Keys
+First I'm going to generate the server keys.
 
 The ```wg genkey``` command below will generate the private key and 
 place the output in the private.key file. Located in the /etc/wireguard
@@ -159,7 +146,76 @@ and direct the output to the ```public.key``` file.
 wg pubkey < private.key > public.key
 ```
 
+### Phone
+---
+
+In this section I'll generate the keys for the phone I'm setting this up on.
+The steps for this are the same for the server.
+
+Generate the private key for the phone.
+
+```sh
+wg genkey > phone-private.key
+```
+
+Generate the public key for the phone.
+
+```sh
+wg pubkey < phone-private.key > phone-public.key
+```
+
+### Workstation
+---
+
+In this section I'll generate the keys utilized on the workstation. The steps
+for this are the same as they should be for the server.
+
+Need to generate the private key first.
+
+```sh
+wg genkey > workstation-private.key
+```
+
+Generate the public key.
+
+```sh
+wg pubkey < workstation-private.key > workstation-public.key
+```
+
+## WireGuard Server Setup
+---
+
+Creating the wirguard directory where the confiuration file will be
+stored.
+
+```sh
+mkdir -p /etc/wireguard
+```
+
+Creating the WireGuard configuration file for later. One thing to keep in mind
+is if we're doing this as root. We'll need to set the umask to 077 before the
+files creation.
+
+```sh
+touch /etc/wireguard/wg0.conf
+```
+
+Making the configuration file for the tunnel interface less accessible
+to anyone who could access the server.
+
+```sh
+chmod 0600 /etc/wireguard/*
+```
+
+Chang the user and group access of the wg0.conf file to root and
+wheel.
+
+```sh
+chown root:wheel /etc/wireguard/wg0.conf
+```
+
 ### Server Configuration
+---
 
 In the ```/etc/wireguard/wg0.conf``` file, added the following. The
 ```wg0.conf``` file will be utilized to apply the WireGuard
@@ -215,13 +271,15 @@ following things.
 ```sh
 inet 10.19.19.250 255.255.255.0 NONE description "Road Warrior Tunnel (wg0)"
 up
+
 !/usr/local/bin/wg setconf wg0 /etc/wireguard/wg0.conf
 ```
 
 ### PF Configuration
+---
 
 Firewall rules are needed so traffic passes accordingly. It does the
-following.
+following. Make sure to add them at the bottom of the file.
 
 - Passes in all traffic on the ```wg0``` interface and logs the
   traffic.
@@ -233,26 +291,19 @@ following.
 # WireGuard tunnel rules (wg0)
 pass in log on wg0
 pass in log inet proto udp from any to any port 51820
-pass out log on egress inet from (wg0:network) to any nat-to (vio0)
+pass out log on egress inet from (wg0:network) nat-to (vio0)
 ```
 
 ## Phone Configuration
+---
 
-Some recommendations for WireGuard apps can be seen in the following.
+Now it's time to configure the phone for connection. This can be accomplished 
+by following the steps below.
 
-### Key Generation
-
-```sh
-wg genkey > phone-private.key
-```
-
-Generate the public key.
-
-```sh
-wg pubkey < phone-private.key > phone-public.key
-```
+In this section I'm going to go through the process of generating the public
 
 ### Phone Client Configuration
+---
 
 Some explaination of the phone configuration is below.
 
@@ -267,8 +318,8 @@ Some explaination of the phone configuration is below.
 - ```PersistentKeepAlive```: Ammount of time in seconds that the
   availability of tunnel connectivity is checked.
 
-The actual configuration output for the phone can be found below as
-well.
+The actual configuration output for the phone can be found below. I create this
+on the server in preparation of the next step.
 
 ```ini
 [Interface]
@@ -284,16 +335,18 @@ PersistentKeepAlive = 25
 ```
 
 ### Configure VPN On Phone
+---
 
-Generate the QR code with the 
+Generate the QR code with the qrencode command. This will generate a large
+QR code that can be scanned by the wireguard application during creation
 
 ```sh
-cat /etc/wireguard/phone-client.conf | qrencode -t ansiutf8
+cat /path/to/phone-client.conf | qrencode -t ansiutf8
 ```
 
 A QR code will show up on the screen after entering the command for the
 configuration. Open up the WireGuard mobile app on your phone; after
-installing it, and add a new VPN through the app using the QR code
+installing it, and add a new VPN profile through the app using the QR code
 option. Once it's added it should connect with no issue.
 
 Once the tunnel is up. Internet connectivity can be tested using a web
@@ -301,40 +354,29 @@ browser. All traffic should be routed through the WireGuard server
 hosted on the VPS now.
 
 ## Workstation Configuration
+---
 
-Before setting up WireGuard on the workstation. Consideration needs to
-be taken into which OS is being used. WireGuard is integrated in the
-Linux Kernel. But, how it's setup will depend on the distro it's setup
-on.
+Before setting up WireGuard on the workstation. I need to consider
+which OS is being used. WireGuard is integrated into the Linux Kernel. 
+But, how it's setup will depend on the distro it's setup on.
 
 This will cover setting up WireGuard on Ubuntu because that's the OS I'm
 on at the time. But, I plan on exploring with other operating system in
 the future.
 
 ### Installing Packages
+---
 
 Need to install the necessary software for setting up the WireGuard VPN
 client. Need to install resolvconf because it's required by the wg-quick
 script.
 
 ```sh
-sudo apt install wireguard resolvconf -y
+sudo apt install wireguard -y
 ```
 
-### Key Generation
-
-Need to generate the private key first.
-
-```sh
-wg genkey > phone-private.key
-```
-
-Generate the public key.
-
-```sh
-wg pubkey < phone-private.key > phone-public.key
-```
 ### Creating The Configuration File
+---
 
 Created the configuration file using the following command.
 
@@ -361,6 +403,7 @@ PersistentKeepAlive = 25
 ```
 
 ### Connecting To WireGuard
+---
 
 The command below brings the tunnel up. Depending on how the config file
 is setup. It will configure routing out through the wireguard tunnel and
@@ -376,7 +419,7 @@ note. I will do that in due time.
 
 Below is the output of the command.
 
-```
+```sh
 [#] ip link add wg0 type wireguard
 [#] wg setconf wg0 /dev/fd/63
 [#] ip -4 address add 10.19.19.10/24 dev wg0
@@ -391,6 +434,7 @@ Below is the output of the command.
 ```
 
 ### Disconnecting From WireGuard Tunnel
+---
 
 The command below will bring the tunnel down and restore connectivity to
 the local network.
@@ -403,7 +447,7 @@ The output below shows that it's doing the following things. It's
 cleaning up all of the work it's done from the previous ```wg-quick down
 wg0``` command.
 
-```
+```sh
 [#] ip -4 rule delete table 51820
 [#] ip -4 rule delete table main suppress_prefixlength 0
 [#] ip link delete dev wg0
@@ -417,6 +461,7 @@ It will provide some things that will allow for proper testing and some
 troubleshooting tips for the VPN.
 
 ## Troubleshooting & Testing
+---
 
 This section covers some tips for troubleshooting. Throughout a
 deployment issues come up. It happens. Something runs amok and there's a
@@ -520,6 +565,7 @@ traceroute -I ifconfig.io
 ```
 
 ### I Tip My Hat To The Details
+---
 
 One thing to also consider during setup is typos in configuration files.
 This occured when I started setting up the VPN on the server. When I
@@ -550,6 +596,7 @@ net.inet.ip.forwarding=1
 ```
 
 ## Reference
+---
 
 Below are some references that can be found for when I was looking into
 accomplishing this.
