--- a/content/notes/20221203170137.md
+++ b/content/notes/20221203170137.md
@@ -269,9 +269,8 @@ following things.
   found in ```/etc/wireguard/wg0.conf```.
 
 ```sh
-inet 10.19.19.250 255.255.255.0 NONE description "Road Warrior Tunnel (wg0)"
+inet 10.19.19.250 255.255.255.0 10.19.19.255 description "Road Warrior Tunnel (wg0)"
 up
-
 !/usr/local/bin/wg setconf wg0 /etc/wireguard/wg0.conf
 ```
 
