--- a/content/notes/20241103211301.md
+++ b/content/notes/20241103211301.md
@@ -1,7 +1,7 @@
 ---
-title: "Generating A QRCode For Easy Access To Wireless"
+title: "Generating A QR Code For Easy Access To Wireless"
 date: 2024-11-03T21:13:01-06:00
-summary: "Notes for installing my Arch Linux workstation."
+summary: "Notes for adding wireless networks using QR codes."
 draft: false
 hidden: false
 externalURL: false
