--- a/content/entries/20250107.md
+++ b/content/entries/20250107.md
@@ -2,7 +2,7 @@
 title: 'Entry 01-07-2025'
 date: 2025-01-07T08:00:00-06:00
 summary: "Journal entry 01-07-2025"
-draft: true
+draft: false
 hidden: false
 externalURL: false
 showDate: true
@@ -13,8 +13,22 @@ showPagination: true
 tags: ["journal"]
 ---
 
-## 10:25
+## 13:14
 ---
 
-Going to be working though my Online Reading Nook or soapbox. We shall see how
-this goes for it.
+I would like to note that I have finished quite a few courses in Google Cloud
+Platform. I'm starting to get the hang of things. So, I'm thinking about posting
+more notes on how to perform different tasks using the gcloud shell and
+Terraform.
+
+Perhaps I should have a page where I say, "Behold. My stuff.", filled with the
+badges I earn from different training. Perhaps I'll call it the training log.
+Filled with completed courses with my thoughts about those courses. Along with
+different certifications and badges I earn throughout the years. 
+
+## 16:36
+---
+
+Just posted a few articles on Fortinet interface statistics and how to see,
+clear, and restore them through the commandline.
+
