--- a/content/notes/20220613132801.md
+++ b/content/notes/20220613132801.md
@@ -1,11 +1,11 @@
 ---
-title: "Cisco Switches: Configuring An Access VLAN On A Port"
+title: "Configuring An Access VLAN On A Port On Cisco Switches"
 date: "2022-06-13T13:28:01-05:00"
+lastmod: 2025-10-10
+author: Timothy Loftus (n3s0)
 description: "Notes for configuring a VLAN on a Cisco switch port."
 tags: [ "Cisco", "IOS", "Switch" ]
 draft: false
-type: post
-showTableOfContents: true
 ---
 
 ## Summary
