Experimenting with cover images

--- a/content/notes/20230717085626.md
+++ b/content/notes/20230717085626.md
@@ -1,15 +1,8 @@
 ---
-title: "FortiGate: Adding A DHCP Server To A VLAN Interface With The DMZ Role"
+title: "Adding A DHCP Server To A VLAN Interface With The DMZ Role On FortiGate"
 date: 2023-07-17T08:56:26+06:00
-summary: "Notes for adding a DHCP server to a FortiGate firewall VLAN interface with the DMZ role through cli."
+description: "Notes for adding a DHCP server to a FortiGate firewall VLAN interface with the DMZ role through cli."
 draft: false
-hidden: false
-externalURL: false
-showDate: true
-showModDate: true
-showReadingTime: true
-showTags: true
-showPagination: true
 tags: ["netadmin"]
 ---
 
